src/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>City_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude_Longitude_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latitude/Longitude Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Latitude__c</fullName>
        <label>Max Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Longitude__c</fullName>
        <label>Max Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Latitude__c</fullName>
        <label>Min Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Longitude__c</fullName>
        <label>Min Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Is_Active__c</fullName>
        <formula>Rep__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <formula>Rep__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Team__c</fullName>
        <formula>TEXT(Rep__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Robin Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Number__c</fullName>
        <label>Round Robin Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>IF(City_Defined__c,4,0)+ 
IF(Latitude_Longitude_Defined__c,6,0)+ 
IF(Round_Robin_Defined__c,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Definition__c</fullName>
        <label>Territory Definition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City__c</fullName>
                </value>
                <value>
                    <fullName>Latitude_Longitude__c</fullName>
                </value>
                <value>
                    <fullName>Round_Robin__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Geo__c</fullName>
        <label>Territory Geo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>